# posthole

./: .dockerignore  .editorconfig  .env.schema  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  Procfile.dev  README.md  SECURITY.md  compose.yaml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker.yml  publish.yml  release.yml
docs/: migrations.md
scripts/: build.mjs
src/posthole/: __init__.py  __main__.py  config.py  main.py  seed.py
src/posthole/core/: __init__.py  csrf.py  tabs.py
src/posthole/core/exceptions/: __init__.py  handlers.py  types.py
src/posthole/core/lifecycle/: __init__.py  hot_reload.py  lifespan.py
src/posthole/core/logging/: __init__.py  config.py  middleware.py  processors.py  terminal.py
src/posthole/core/templates/: __init__.py  config.py  middleware.py
src/posthole/db/: __init__.py  accounts.py  database.py  oauth.py  posts.py  query.py
src/posthole/db/migrations/: 0000_initial.sql  0001_instagram.sql  0002_multiplatform.sql  0003_post_media_items.sql  0004_accounts_unique_handle.sql  __init__.py  loader.py
src/posthole/db/sql/: __init__.py  accounts.py  oauth.py  posts.py  pragmas.py  schema_version.py
src/posthole/logging/: __init__.py  config.py  middleware.py  processors.py  terminal.py
src/posthole/routes/: __init__.py
src/posthole/routes/pages/: __init__.py
src/posthole/routes/pages/accounts/: __init__.py  context.py  routes.py
src/posthole/routes/pages/health/: __init__.py  routes.py
src/posthole/routes/pages/posts/: __init__.py  context.py  exceptions.py  handlers.py  routes.py
src/posthole/routes/pages/scenarios/: __init__.py  routes.py
src/posthole/routes/pages/settings/: __init__.py  routes.py
src/posthole/templates/: README.md
src/posthole/templates/instagram/: authorize.html.j2
src/posthole/templates/layouts/: app.html.j2
src/posthole/templates/macros/: filters.html.j2  form_fields.html.j2  icon.html.j2  post_link.html.j2  status_pill.html.j2  tabs.html.j2
src/posthole/templates/pages/: not_found.html.j2
src/posthole/templates/pages/accounts/: _card.html.j2  _edit_dialog.html.j2  _filter_bar.html.j2  _new_dialog.html.j2  _setup_hint.html.j2  index.html.j2
src/posthole/templates/pages/posts/: _detail.html.j2  _empty.html.j2  _list_header.html.j2  _not_found.html.j2  _phone_frame.html.j2  _row.html.j2  index.html.j2
src/posthole/templates/pages/scenarios/: index.html.j2
src/posthole/templates/partials/: sidenav.html.j2  topbar.html.j2
src/posthole/templates/tiktok/: authorize.html.j2
src/posthole/ui/: main.ts  styles.css
src/posthole/ui/__specs__/: helpers.ts  setup.ts
src/posthole/ui/controllers/: carousel_controller.ts  clipboard_controller.ts  dialog_controller.ts  hello_controller.ts  list_selection_controller.ts  liveness_controller.ts  phone_controller.ts  platform_types_controller.ts  search_controller.ts  tabs_controller.ts
src/posthole/ui/controllers/__specs__/: carousel_controller.spec.ts  clipboard_controller.spec.ts  dialog_controller.spec.ts  hello_controller.spec.ts  list_selection_controller.spec.ts  liveness_controller.spec.ts  phone_controller.spec.ts  search_controller.spec.ts  sidebar_controller.spec.ts  tabs_controller.spec.ts  theme_controller.spec.ts
src/posthole/ui/types/: turbo.d.ts
src/posthole/web/: middleware.py  pages.py  templates.py
src/postpit/: __init__.py  __main__.py  config.py  main.py
src/postpit/templates/: README.md  base.html.jinja  index.html.jinja
src/postpit/templates/layouts/: app.html.j2
src/postpit/templates/macros/: empty_state.html.j2
src/postpit/templates/pages/inbox/: index.html.j2
src/postpit/templates/pages/scenarios/: index.html.j2
src/postpit/templates/pages/settings/: index.html.j2
src/postpit/templates/partials/: sidenav.html.j2  topbar.html.j2
src/postpit/web/: __init__.py  pages.py  system.py  templates.py
tests/: conftest.py  test_db.py  test_logging.py  test_middleware.py  test_pages.py  test_platforms.py  test_templates.py  test_tiktok_oauth.py  test_tiktok_publish.py
tests/core/: test_csrf.py  test_tabs.py
tests/core/logging/: test_logging.py
tests/core/templates/: test_middleware.py  test_templates.py
tests/db/: test_db.py  test_query.py
tests/routes/pages/: test_accounts.py  test_health.py  test_pages.py
ui/: build.mjs  main.ts  styles.css
ui/controllers/: sidebar_controller.ts  theme_controller.ts
web/: build.mjs  main.ts  styles.css
